# mcp-test

weather-mcp-system/: README.md  run-weather-app.bat  run-weather-app.sh
weather-mcp-system/mcp-weather-client/: README.md  pyproject.toml
weather-mcp-system/mcp-weather-client/weather_client/: __init__.py  app.py
weather-mcp-system/mcp-weather-client/weather_client/static/css/: style.css
weather-mcp-system/mcp-weather-client/weather_client/static/js/: app.js
weather-mcp-system/mcp-weather-client/weather_client/templates/: index.html
weather-mcp-system/mcp-weather-server/: README.md  pyproject.toml
weather-mcp-system/mcp-weather-server/mcp_weather_server/: __init__.py  __main__.py  server.py
